
AM_CXXFLAGS=-I$(top_srcdir)

bin_PROGRAMS = $(top_builddir)/chiML

__top_builddir__chiML_SOURCES =  DTC/parallelStorageDTC.cpp DTC/parallelStorageFreqDTC.cpp DTC/parallelDTC.cpp DTC/parallelDTCOutputFxn.cpp DTC/toBitMap.cpp DTC/parallelFlux.cpp DTC/parallelDTC_FREQ.cpp DTC/parallelDTC_TXT.cpp DTC/parallelDTC_BIN.cpp DTC/parallelDTC_BMP.cpp DTC/parallelDTC_COUT.cpp INPUTS/parallelInputs.cpp MPI/mpiInterface.cpp OBJECTS/Obj.cpp PML/parallelPML.cpp PML/PML.cpp SOURCE/Pulse.cpp SOURCE/parallelSourceOblique.cpp SOURCE/parallelSourceNormal.cpp SOURCE/parallelTFSF.cpp  UTIL/FDTD_up_eq.cpp ML/parallelQE.cpp ML/BasisSet.cpp ML/Hamiltonian.cpp  ML/QEPopDtc.cpp FDTD_MANAGER/parallelFDTDField.cpp main.cpp


